--- a/integrations/gmail/tsconfig.json
+++ b/integrations/gmail/tsconfig.json
@@ -7,5 +7,5 @@
     "baseUrl": ".",
     "outDir": "dist"
   },
-  "include": [".botpress/**/*", "src/**/*", "integration.definition.ts"]
+  "include": [".botpress/**/*", "definitions/**/*", "src/**/*", "integration.definition.ts"]
 }
