--- a/integrations/trello/src/tsconfig.json
+++ b/integrations/trello/src/tsconfig.json
@@ -7,5 +7,5 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["**/*", "../integration.definition.ts", "../definitions/**/*"]
+  "include": [".botpress/**/*", "definitions/**/*", "src/**/*", "integration.definition.ts"]
 }
