--- a/integrations/chat/tsconfig.json
+++ b/integrations/chat/tsconfig.json
@@ -4,5 +4,5 @@
     "baseUrl": ".",
     "noErrorTruncation": true
   },
-  "include": [".botpress/**/*", "src/**/*.ts", "src/**/*.json", "./*.ts", "./*.json"]
+  "include": [".botpress/**/*", "definitions/**/*", "src/**/*", "integration.definition.ts"]
 }
