--- a/packages/workflow/package.json
+++ b/packages/workflow/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "workflow",
+  "name": "@bpinternal/workflow",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
