chore(llmz): expose truncate

--- a/packages/llmz/package.json
+++ b/packages/llmz/package.json
@@ -2,8 +2,10 @@
   "name": "llmz",
   "type": "module",
   "description": "LLMz – An LLM-native Typescript VM built on top of Zui",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "types": "./dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
       "import": "./dist/index.js",
