--- a/integrations/vonage/package.json
+++ b/integrations/vonage/package.json
@@ -19,7 +19,7 @@
     "@sentry/cli": "^2.39.1"
   },
   "bpDependencies": {
-    "proactive-user": "interface:proactive-user@0.0.3",
-    "proactive-conversation": "interface:proactive-conversation@0.0.3"
+    "proactive-user": "../../interfaces/proactive-user",
+    "proactive-conversation": "../../interfaces/proactive-conversation"
   }
 }
