--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.4.4",
     "esbuild": "^0.16.12",
     "handlebars": "^4.7.8",
+    "ini": "^5.0.0",
     "latest-version": "5.1.0",
     "lodash": "^4.17.21",
     "prettier": "^3.4.2",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@bpinternal/log4bot": "^0.0.4",
     "@types/bluebird": "^3.5.38",
+    "@types/ini": "^4.1.1",
     "@types/json-schema": "^7.0.12",
     "@types/prompts": "^2.0.14",
     "@types/semver": "^7.3.11",
