feat(integrations/vonage): proactive user + conversation implementation (#14086)
Co-authored-by: François Levasseur <francois_levasseur@hotmail.com>

--- a/integrations/vonage/package.json
+++ b/integrations/vonage/package.json
@@ -17,5 +17,9 @@
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.39.1"
+  },
+  "bpDependencies": {
+    "proactive-user": "../../interfaces/proactive-user",
+    "proactive-conversation": "../../interfaces/proactive-conversation"
   }
 }
