--- a/integrations/telegram/package.json
+++ b/integrations/telegram/package.json
@@ -11,6 +11,8 @@
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
+    "dompurify": "^3.2.6",
+    "jsdom": "^26.1.0",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
     "telegraf": "^4.16.3"
@@ -20,6 +22,7 @@
     "@botpress/common": "workspace:*",
     "@botpresshub/typing-indicator": "workspace:*",
     "@sentry/cli": "^2.39.1",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.14.191",
     "@types/markdown-it": "^14.1.2"
   },
