--- a/bigoutputbot/package.json
+++ b/bigoutputbot/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.6.3"
   },
   "bpDependencies": {
-    "bigoutput": "../bigoutput"
+    "bigoutput": "bigoutput",
+    "telegram": "telegram"
   }
 }
