--- a/integrations/telegram/package.json
+++ b/integrations/telegram/package.json
@@ -13,6 +13,7 @@
     "@botpress/sdk-addons": "workspace:*",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
+    "nanoid": "^5.1.5",
     "sanitize-html": "^2.17.0",
     "telegraf": "^4.16.3"
   },
