--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "test": "vitest --run",
     "check:bplint": "turbo check:bplint",
     "check:dep": "depsynky check --ignore-dev",
-    "check:sherif": "sherif -i zod -i axios -i query-string -i googleapis -i @linear/sdk",
+    "check:sherif": "sherif -i zod -i axios -i query-string -i googleapis -i @linear/sdk -i openai",
     "check:format": "prettier --check .",
     "check:eslint": "eslint ./ --max-warnings=0",
     "check:oxlint": "oxlint -c .oxlintrc.json",
     "check:lint": "pnpm check:bplint && pnpm check:oxlint && pnpm check:eslint",
     "check:type": "turbo check:type",
     "fix:dep": "depsynky sync --ignore-dev",
-    "fix:sherif": "sherif -i zod -i axios -i query-string -i googleapis -i @linear/sdk --fix",
+    "fix:sherif": "sherif -i zod -i axios -i query-string -i googleapis -i @linear/sdk -i openai --fix",
     "fix:format": "prettier --write .",
     "fix:oxlint": "oxlint -c .oxlintrc.json --fix --fix-suggestions",
     "fix:lint": "eslint --fix ./",
