--- a/plugins/file-synchronizer/package.json
+++ b/plugins/file-synchronizer/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@botpresshub/hitl": "workspace:*",
-    "@types/picomatch": "^3.0.2"
+    "@types/picomatch": "^3.0.2",
+    "@types/semver": "^7.3.11",
+    "semver": "^7.3.8"
   },
   "bpDependencies": {
     "files-readonly": "../../interfaces/files-readonly"
