--- a/plugins/hitl/package.json
+++ b/plugins/hitl/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@botpresshub/hitl": "workspace:*",
-    "@types/lodash": "^4.14.191"
+    "@types/lodash": "^4.14.191",
+    "@types/semver": "^7.3.11",
+    "semver": "^7.3.8"
   },
   "bpDependencies": {
     "hitl": "../../interfaces/hitl"
