--- a/plugins/synchronizer/package.json
+++ b/plugins/synchronizer/package.json
@@ -17,7 +17,9 @@
     "@botpresshub/deletable": "workspace:*",
     "@botpresshub/listable": "workspace:*",
     "@botpresshub/updatable": "workspace:*",
-    "@types/lodash": "^4.14.191"
+    "@types/lodash": "^4.14.191",
+    "@types/semver": "^7.3.11",
+    "semver": "^7.3.8"
   },
   "bpDependencies": {
     "listable": "../../interfaces/listable",
