--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,8 +31,8 @@
       "name": "Debug CLI",
       "type": "node",
       "request": "launch",
-      "runtimeExecutable": "node",
-      "args": ["${workspaceRoot}/packages/cli", "${input:cli-command}"],
+      "runtimeExecutable": "/Users/nathanielgirard/.local/share/mise/installs/node/22.17.0/bin/node",
+      "args": ["${workspaceRoot}/packages/cli", "dev",  "--workDir", "plugins/conv-insights-test-bot"],
       "cwd": "${workspaceRoot}",
       "sourceMaps": true,
       "console": "integratedTerminal",
