--- a/integrations/twilio/package.json
+++ b/integrations/twilio/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "bp add -y && bp build",
+    "deploy": "bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "bp lint"
   },
@@ -11,6 +12,7 @@
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
+    "axios": "^1.6.0",
     "query-string": "^6.14.1",
     "twilio": "^3.84.0"
   },
