feat: Implement Calendly api request handlers

--- a/integrations/calendly/package.json
+++ b/integrations/calendly/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@botpress/client": "workspace:*",
-    "@botpress/sdk": "workspace:*"
+    "@botpress/sdk": "workspace:*",
+    "axios": "^1.11.0"
   }
 }
