chore: add back @mpetruu as codeowner

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -31,7 +31,7 @@
 ## Others
 /integrations/airtable @JustinBordage @botpress/engineering
 /integrations/asana @JustinBordage @botpress/engineering
-/integrations/bigcommerce-sync @matthewbotpress @Nathaniel-Girard @botpress/engineering
+/integrations/bigcommerce-sync @mpetruu @Nathaniel-Girard @botpress/engineering
 /integrations/chat @franklevasseur @botpress/engineering
 /integrations/clickup @JustinBordage @botpress/engineering
 /integrations/confluence @Nathaniel-Girard @botpress/engineering
