--- a/integrations/calcom/package.json
+++ b/integrations/calcom/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "@botpress/calcom",
-  "integrationName": "paul/calcom",
+  "name": "@botpresshub/calcom",
   "scripts": {
-    "check:type": "tsc --noEmit"
+    "build": "bp add -y && bp build",
+    "check:type": "tsc --noEmit",
+    "check:bplint": "bp lint"
   },
   "private": true,
   "dependencies": {
-    "@botpress/client": "1.22.0",
-    "@botpress/sdk": "4.15.2",
-    "axios": "^1.6.8"
+    "@botpress/client": "workspace:*",
+    "@botpress/sdk": "workspace:*",
+    "axios": "^1.11.0"
   },
   "devDependencies": {
     "@types/node": "^22.16.4",
