--- a/integrations/calcom/package.json
+++ b/integrations/calcom/package.json
@@ -12,7 +12,6 @@
     "axios": "^1.11.0"
   },
   "devDependencies": {
-    "@types/node": "^22.16.4",
-    "typescript": "^5.6.3"
+    "@botpress/cli": "workspace:*"
   }
 }
