--- a/integrations/webflow/package.json
+++ b/integrations/webflow/package.json
@@ -5,12 +5,12 @@
   },
   "private": true,
   "dependencies": {
-    "@botpress/client": "1.22.2",
+    "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "webflow-api": "^3.2.0"
   },
   "devDependencies": {
-    "@types/node": "^22.16.4",
-    "typescript": "^5.6.3"
+    "@types/node": "^22.18.0",
+    "typescript": "^5.9.2"
   }
 }
