--- a/integrations/hubspot/package.json
+++ b/integrations/hubspot/package.json
@@ -12,8 +12,8 @@
     "@botpress/sdk-addons": "workspace:*"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@types/node": "^22.16.4",
-    "typescript": "^5.6.3",
-    "@botpress/cli": "workspace:*"
+    "typescript": "^5.6.3"
   }
 }
