--- a/integrations/hubspot/package.json
+++ b/integrations/hubspot/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
-    "@botpress/sdk-addons": "workspace:*"
+    "@botpress/sdk-addons": "workspace:*",
+    "@hubspot/api-client": "^13.1.0"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
