feat(integrations): add HubSpot integration
Co-authored-by: Sébastien Poitras <sebastien.poitras@botpress.com>
Co-authored-by: michaelmass <10071388+michaelmass@users.noreply.github.com>
Co-authored-by: Pascal Breton <pascal.breton@botpress.com>

--- a/integrations/hubspot/package.json
+++ b/integrations/hubspot/package.json
@@ -8,14 +8,11 @@
     "check:bplint": "bp lint"
   },
   "dependencies": {
-    "@botpress/client": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
-    "@botpress/sdk-addons": "workspace:*",
     "@hubspot/api-client": "^13.1.0"
   },
   "devDependencies": {
-    "@botpress/cli": "workspace:*",
-    "@types/node": "^22.16.4",
-    "typescript": "^5.6.3"
+    "@botpress/cli": "workspace:*"
   }
 }
