chore(integrations/hubspot): Move definitions in separate file and create skeleton for contact actions

--- a/integrations/hubspot/tsconfig.json
+++ b/integrations/hubspot/tsconfig.json
@@ -6,5 +6,13 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": [".botpress/**/*", "definitions/**/*", "src/**/*", "integration.definition.ts"]
+  "include": [
+    ".botpress/**/*",
+    "definitions/**/*",
+    "src/**/*",
+    "integration.definition.ts",
+    "./*.ts",
+    "./*.json",
+    "definitions"
+  ]
 }
