--- a/integrations/hubspot/tsconfig.json
+++ b/integrations/hubspot/tsconfig.json
@@ -24,5 +24,5 @@
     "noPropertyAccessFromIndexSignature": false,
     "noUnusedLocals": false
   },
-  "include": [".botpress/**/*", "src/**/*", "./*.ts", "./*.json"]
+  "include": [".botpress/**/*", "src/**/*", "./*.ts", "./*.json", "definitions"]
 }
