working version of collection
removed the webflow-api package because the typing was broken on their
end

--- a/integrations/webflow/package.json
+++ b/integrations/webflow/package.json
@@ -1,5 +1,5 @@
 {
-  "integrationName": "webflow/webflow",
+  "integrationName": "@botpresshub/webflow",
   "scripts": {
     "check:type": "tsc --noEmit"
   },
