add error handling

--- a/integrations/hubspot/package.json
+++ b/integrations/hubspot/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@botpress/client": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "@hubspot/api-client": "^13.1.0"
