removed webflow for custom types

--- a/integrations/webflow/package.json
+++ b/integrations/webflow/package.json
@@ -6,8 +6,7 @@
   "private": true,
   "dependencies": {
     "@botpress/client": "workspace:*",
-    "@botpress/sdk": "workspace:*",
-    "webflow-api": "^3.2.0"
+    "@botpress/sdk": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^22.18.0",
