working version before switching to axios

--- a/integrations/webflow/package.json
+++ b/integrations/webflow/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "dependencies": {
     "@botpress/client": "workspace:*",
-    "@botpress/sdk": "workspace:*"
+    "@botpress/sdk": "workspace:*",
+    "axios": "^1.11.0"
   },
   "devDependencies": {
     "@types/node": "^22.18.0",
