--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -11,12 +11,17 @@ runs:
   steps:
     - uses: pnpm/action-setup@v4
       with:
-        version: 8.6.2
+        version: 9.15.9
 
     - uses: actions/setup-node@v3
       with:
         node-version: '22.17.0'
         check-latest: true
+
+    - name: Install Node Gyp Build
+      shell: ${{ runner.os == 'Windows' && 'pwsh' || 'bash' }}
+      run: |
+        npm install -g node-gyp-build
 
     - name: Install dependencies
       shell: ${{ runner.os == 'Windows' && 'pwsh' || 'bash' }}
