chore: migrate eslint

--- a/biome.json
+++ b/biome.json
@@ -1,59 +1,269 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
-	"vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
-	"files": { "ignoreUnknown": false },
-	"formatter": {
-		"enabled": true,
-		"formatWithErrors": false,
-		"indentStyle": "space",
-		"indentWidth": 2,
-		"lineEnding": "lf",
-		"lineWidth": 120,
-		"attributePosition": "auto",
-		"bracketSameLine": false,
-		"bracketSpacing": true,
-		"expand": "auto",
-		"useEditorconfig": true,
-		"includes": [
-			"**",
-			"!**/*",
-			"**/",
-			"**/*.ts",
-			"**/*.tsx",
-			"**/*.json",
-			"**/*.yaml",
-			"**/*.yml",
-			"**/*.md",
-			"!**/pnpm-lock.yaml",
-			"!**/gen",
-			"!**/dist",
-			"!**/.botpress",
-			"!**/.botpresshome",
-			"!**/.botpresshome.*",
-			"!**/bp_modules",
-			"!**/.genenv/",
-			"!**/.genenv.*",
-			"!**/.turbo",
-			"!**/*.md.ts"
-		]
-	},
-	"linter": { "enabled": true, "rules": { "recommended": true } },
-	"javascript": {
-		"formatter": {
-			"jsxQuoteStyle": "double",
-			"quoteProperties": "asNeeded",
-			"trailingCommas": "es5",
-			"semicolons": "asNeeded",
-			"arrowParentheses": "always",
-			"bracketSameLine": false,
-			"quoteStyle": "single",
-			"attributePosition": "auto",
-			"bracketSpacing": true
-		}
-	},
-	"html": { "formatter": { "selfCloseVoidElements": "always" } },
-	"assist": {
-		"enabled": true,
-		"actions": { "source": { "organizeImports": "on" } }
-	}
+  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+  "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
+  "files": { "ignoreUnknown": false },
+  "formatter": {
+    "enabled": true,
+    "formatWithErrors": false,
+    "indentStyle": "space",
+    "indentWidth": 2,
+    "lineEnding": "lf",
+    "lineWidth": 120,
+    "attributePosition": "auto",
+    "bracketSameLine": false,
+    "bracketSpacing": true,
+    "expand": "auto",
+    "useEditorconfig": true,
+    "includes": [
+      "**",
+      "!**/*",
+      "**/",
+      "**/*.ts",
+      "**/*.tsx",
+      "**/*.json",
+      "**/*.yaml",
+      "**/*.yml",
+      "**/*.md",
+      "!**/pnpm-lock.yaml",
+      "!**/gen",
+      "!**/dist",
+      "!**/.botpress",
+      "!**/.botpresshome",
+      "!**/.botpresshome.*",
+      "!**/bp_modules",
+      "!**/.genenv/",
+      "!**/.genenv.*",
+      "!**/.turbo",
+      "!**/*.md.ts"
+    ]
+  },
+  "linter": {
+    "enabled": true,
+    "rules": { "recommended": false },
+    "includes": [
+      "**",
+      "!.git/",
+      "!**/*.{d.ts,test.ts,js,cjs,mjs,jsx}",
+      "!**/cdk.out/",
+      "!**/dist/",
+      "!node_modules/",
+      "!**/node_modules/",
+      "!**/bp_modules/",
+      "!**/.botpress/",
+      "!**/gen/",
+      "!**/.turbo/",
+      "!**/.genenv/",
+      "!**/.ignore.me.*",
+      "!**/*.md.ts",
+      "!packages/llmz/examples/"
+    ]
+  },
+  "javascript": {
+    "formatter": {
+      "jsxQuoteStyle": "double",
+      "quoteProperties": "asNeeded",
+      "trailingCommas": "es5",
+      "semicolons": "asNeeded",
+      "arrowParentheses": "always",
+      "bracketSameLine": false,
+      "quoteStyle": "single",
+      "attributePosition": "auto",
+      "bracketSpacing": true
+    }
+  },
+  "html": { "formatter": { "selfCloseVoidElements": "always" } },
+  "overrides": [
+    {
+      "includes": [
+        "**/*.{ts,tsx}",
+        "!.git/",
+        "!**/*.{d.ts,test.ts,js,cjs,mjs,jsx}",
+        "!**/cdk.out/",
+        "!**/dist/",
+        "!node_modules/",
+        "!**/node_modules/",
+        "!**/bp_modules/",
+        "!**/.botpress/",
+        "!**/gen/",
+        "!**/.turbo/",
+        "!**/.genenv/",
+        "!**/.ignore.me.*",
+        "!**/*.md.ts",
+        "!packages/llmz/examples/"
+      ],
+      "javascript": {
+        "globals": [
+          "onanimationend",
+          "exports",
+          "ongamepadconnected",
+          "onlostpointercapture",
+          "onanimationiteration",
+          "onkeyup",
+          "onmousedown",
+          "onanimationstart",
+          "onslotchange",
+          "onprogress",
+          "ontransitionstart",
+          "onpause",
+          "onended",
+          "onpointerover",
+          "onscrollend",
+          "onformdata",
+          "ontransitionrun",
+          "onanimationcancel",
+          "ondrag",
+          "onchange",
+          "onbeforeinstallprompt",
+          "onbeforexrselect",
+          "onmessage",
+          "ontransitioncancel",
+          "onpointerdown",
+          "onabort",
+          "onpointerout",
+          "oncuechange",
+          "ongotpointercapture",
+          "onscrollsnapchanging",
+          "onsearch",
+          "onsubmit",
+          "onstalled",
+          "onsuspend",
+          "onreset",
+          "onerror",
+          "onresize",
+          "onmouseenter",
+          "ongamepaddisconnected",
+          "ondragover",
+          "onbeforetoggle",
+          "onmouseover",
+          "onpagehide",
+          "onmousemove",
+          "onratechange",
+          "onmessageerror",
+          "onwheel",
+          "ondevicemotion",
+          "onauxclick",
+          "ontransitionend",
+          "onpaste",
+          "onpageswap",
+          "ononline",
+          "ondeviceorientationabsolute",
+          "onkeydown",
+          "onclose",
+          "onselect",
+          "onpageshow",
+          "onpointercancel",
+          "onbeforematch",
+          "onpointerrawupdate",
+          "ondragleave",
+          "onscrollsnapchange",
+          "onseeked",
+          "onwaiting",
+          "onbeforeunload",
+          "onplaying",
+          "onvolumechange",
+          "ondragend",
+          "onstorage",
+          "onloadeddata",
+          "onfocus",
+          "onoffline",
+          "onplay",
+          "onafterprint",
+          "onclick",
+          "oncut",
+          "onmouseout",
+          "ondblclick",
+          "oncanplay",
+          "onloadstart",
+          "onappinstalled",
+          "onpointermove",
+          "ontoggle",
+          "oncontextmenu",
+          "onblur",
+          "oncancel",
+          "onbeforeprint",
+          "oncontextrestored",
+          "onloadedmetadata",
+          "onpointerup",
+          "onlanguagechange",
+          "oncopy",
+          "onselectstart",
+          "onscroll",
+          "onload",
+          "ondragstart",
+          "onbeforeinput",
+          "oncanplaythrough",
+          "oninput",
+          "oninvalid",
+          "ontimeupdate",
+          "ondurationchange",
+          "onselectionchange",
+          "onmouseup",
+          "location",
+          "onkeypress",
+          "onpointerleave",
+          "oncontextlost",
+          "ondrop",
+          "onsecuritypolicyviolation",
+          "oncontentvisibilityautostatechange",
+          "ondeviceorientation",
+          "onseeking",
+          "onrejectionhandled",
+          "onunload",
+          "onmouseleave",
+          "onhashchange",
+          "onpointerenter",
+          "onmousewheel",
+          "onunhandledrejection",
+          "ondragenter",
+          "onpopstate",
+          "onpagereveal",
+          "onemptied"
+        ]
+      },
+      "linter": {
+        "rules": {
+          "complexity": { "useArrowFunction": "off" },
+          "correctness": { "noConstAssign": "off" },
+          "nursery": {
+            "noFloatingPromises": "error",
+            "noMisusedPromises": "error",
+            "useConsistentTypeDefinitions": "off"
+          },
+          "security": { "noGlobalEval": "off" },
+          "style": {
+            "useCollapsedIf": "off",
+            "useConsistentMemberAccessibility": "warn",
+            "useConsistentObjectDefinitions": "error",
+            "useConst": "warn",
+            "useDefaultSwitchClause": "off",
+            "useNamingConvention": {
+              "level": "warn",
+              "options": {
+                "strictCase": false,
+                "requireAscii": false,
+                "conventions": [
+                  {
+                    "selector": { "kind": "classMember", "modifiers": ["private"] },
+                    "match": "_([^_]*)",
+                    "formats": ["camelCase"]
+                  }
+                ]
+              }
+            }
+          },
+          "suspicious": {
+            "noAssignInExpressions": "off",
+            "noConsole": "off",
+            "noDebugger": "off",
+            "noDoubleEquals": "off",
+            "noSparseArray": "off",
+            "noVar": "off",
+            "useDefaultSwitchClauseLast": "off",
+            "useNamespaceKeyword": "off"
+          }
+        }
+      }
+    }
+  ],
+  "assist": { "enabled": true, "actions": { "source": { "organizeImports": "on" } } }
 }
