--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "fix": "pnpm fix:sherif && pnpm fix:dep && pnpm fix:oxlint && pnpm fix:format && pnpm fix:lint"
   },
   "lint-staged": {
-    "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx}": [
-      "oxlint -c .oxlintrc.json --fix --fix-suggestions",
-      "prettier --write"
-    ],
+    "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx}": ["oxlint -c .oxlintrc.json --fix --fix-suggestions", "prettier --write"],
     "**/*.{json,yaml,yml,md}": "prettier --write",
     "**/*.test.ts": "vitest --run"
   },
