--- a/integrations/canny/package.json
+++ b/integrations/canny/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "@bp-templates/hello-world",
-  "integrationName": "canny/canny",
-  "scripts": {
-    "check:type": "tsc --noEmit"
-  },
+  "name": "@botpresshub/canny",
+  "description": "Canny integration for Botpress",
   "private": true,
+  "scripts": {
+    "build": "bp add -y && bp build",
+    "check:type": "tsc --noEmit",
+    "check:bplint": "bp lint"
+  },
   "dependencies": {
-    "@botpress/client": "1.24.0",
-    "@botpress/sdk": "4.15.5",
+    "@botpress/client": "workspace:*",
+    "@botpress/sdk": "workspace:*",
     "axios": "^1.6.0"
   },
   "devDependencies": {
