fix: added integrationName to package.json

--- a/integrations/canny/package.json
+++ b/integrations/canny/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@botpresshub/canny",
+  "integrationName": "canny",
   "description": "Canny integration for Botpress",
   "private": true,
   "scripts": {
