--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "check:bplint": "turbo check:bplint",
     "check:dep": "depsynky check --ignore-dev",
     "check:sherif": "sherif -i zod -i axios -i query-string -i googleapis -i @linear/sdk -i openai",
-    "check:format": "prettier --check .",
-    "check:eslint": "eslint ./ --max-warnings=0",
+    "check:format": "biome format --diagnostic-level error",
+    "check:eslint": "biome lint --diagnostic-level error",
     "check:oxlint": "oxlint -c .oxlintrc.json",
     "check:lint": "pnpm check:bplint && pnpm check:oxlint && pnpm check:eslint",
     "check:type": "turbo check:type",
     "fix:dep": "depsynky sync --ignore-dev",
     "fix:sherif": "sherif -i zod -i axios -i query-string -i googleapis -i @linear/sdk -i openai --fix",
-    "fix:format": "prettier --write .",
+    "fix:format": "biome format --diagnostic-level error --write",
     "fix:oxlint": "oxlint -c .oxlintrc.json --fix --fix-suggestions",
-    "fix:eslint": "eslint --fix ./",
+    "fix:eslint": "biome lint --diagnostic-level error --write",
     "fix:lint": "pnpm fix:oxlint && pnpm fix:eslint",
     "check": "pnpm check:sherif && pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type",
     "fix": "pnpm fix:sherif && pnpm fix:dep && pnpm fix:oxlint && pnpm fix:format && pnpm fix:lint"
