--- a/integrations/loops/package.json
+++ b/integrations/loops/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "@bp-templates/empty-integration",
-  "integrationName": "yang-li-test/loops",
-  "scripts": {
-    "check:type": "tsc --noEmit"
-  },
+  "name": "@botpresshub/loops",
+  "description": "Loops integration for Botpress",
   "private": true,
+  "scripts": {
+    "build": "bp add -y && bp build",
+    "check:type": "tsc --noEmit",
+    "check:bplint": "bp lint"
+  },
   "dependencies": {
-    "@botpress/client": "1.24.0",
-    "@botpress/sdk": "4.15.5"
+    "@botpress/common": "workspace:*",
+    "@botpress/sdk": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "^22.16.4",
-    "typescript": "^5.6.3"
+    "@botpress/cli": "workspace:*"
   }
 }
