--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "check:dep": "depsynky check --ignore-dev",
     "check:sherif": "sherif -i zod -i axios -i query-string -i googleapis -i @linear/sdk -i openai",
     "check:format": "prettier --check .",
+    "check:format:memory": "NODE_OPTIONS=\"--max-old-space-size=4096\" prettier --check .",
     "check:eslint": "eslint ./ --max-warnings=0",
+    "check:eslint:memory": "NODE_OPTIONS=\"--max-old-space-size=4096\" eslint ./ --max-warnings=0",
+    "check:eslint:no-tests": "eslint ./ --max-warnings=0 --ignore-pattern \"**/*.test.ts\" --ignore-pattern \"**/*.spec.ts\"",
+    "fix:eslint:no-tests": "eslint --fix ./ --ignore-pattern \"**/*.test.ts\" --ignore-pattern \"**/*.spec.ts\"",
     "check:oxlint": "oxlint -c .oxlintrc.json",
     "check:lint": "pnpm check:bplint && pnpm check:oxlint && pnpm check:eslint",
     "check:type": "turbo check:type",
     "fix:dep": "depsynky sync --ignore-dev",
     "fix:sherif": "sherif -i zod -i axios -i query-string -i googleapis -i @linear/sdk -i openai --fix",
     "fix:format": "prettier --write .",
+    "fix:format:memory": "NODE_OPTIONS=\"--max-old-space-size=4096\" prettier --write .",
     "fix:oxlint": "oxlint -c .oxlintrc.json --fix --fix-suggestions",
     "fix:eslint": "eslint --fix ./",
+    "fix:eslint:memory": "NODE_OPTIONS=\"--max-old-space-size=4096\" eslint --fix ./",
     "fix:lint": "pnpm fix:oxlint && pnpm fix:eslint",
     "check": "pnpm check:sherif && pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type",
     "fix": "pnpm fix:sherif && pnpm fix:dep && pnpm fix:oxlint && pnpm fix:format && pnpm fix:lint"
